--- a/style.css
+++ b/style.css
@@ -67,3 +67,50 @@ body {
     width: 430px;
     outline: none;
 }
+
+.todo-item {
+    border-bottom: 1px solid #E3E3FF;
+    min-height: 50px;
+}
+
+.todo-item:hover {
+    background-color: #fafafa;
+}
+
+.todo-item_ready-mark {
+    position: relative;
+    width: 40px;
+    height: 40px;
+}
+
+.todo-item_ready-mark_target {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.todo-item_ready-mark_visual {
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    bottom: 10%;
+    left: 10%;
+    background: green;
+    border-radius: 50%;
+}
+
+.todo-item_ready-mark_target:hover ~ .todo-item_ready-mark_visual {
+    background: yellow;
+}
+
+.todo-item_ready-mark_target:checked ~ .todo-item_ready-mark_visual {
+    background: red;
+}
+
+.todo-item_ready-mark_target:hover:checked ~ .todo-item_ready-mark_visual {
+    background: blue;
+}
